Added BigTIFF support
git-svn-id: https://svn.java.net/svn/imageio-ext~svn/trunk@1193 866bbf7d-4862-ccf5-812a-c90ffd63a74d